Bug 154142 - Crash in: SfxUndoManager::SetMaxUndoActionCount(unsigned __int64)
Summary: Crash in: SfxUndoManager::SetMaxUndoActionCount(unsigned __int64)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-12 00:31 UTC by gordsown
Modified: 2023-10-11 08:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["SfxUndoManager::SetMaxUndoActionCount(unsigned __int64)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gordsown 2023-03-12 00:31:02 UTC
This bug was filed from the crash reporting server and is br-79a5c643-2e5d-4423-93f1-9f7db94dea4b.
=========================================
Comment 1 m_a_riosv 2023-03-12 03:03:54 UTC
Please, could you add the step to reproduce the crash. And also, past here the info in Menu/Help/About LibreOffice (there is a button to copy)
Comment 2 QA Administrators 2023-09-09 03:06:46 UTC Comment hidden (obsolete)
Comment 3 gordsown 2023-09-09 14:28:23 UTC
don't know the steps that were being perform3ed when this happened. probably should just close the item.
Comment 4 QA Administrators 2023-09-10 03:20:43 UTC Comment hidden (obsolete)
Comment 5 Caolán McNamara 2023-09-27 07:29:59 UTC
from:

Crash Reason 	EXCEPTION_ACCESS_VIOLATION_READ
Crash Address 	0x0 

I presume that

SfxUndoManager* pMgr = mrViewData.GetSfxDocShell()->GetUndoManager();

returned nullptr and

pMgr->SetMaxUndoActionCount( 0 )

is the null deref
Comment 6 Commit Notification 2023-10-10 19:44:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6cfd36a392ec3710304ff3df3cb0f42e0d8b53d9

tdf#154142 null-deref in SfxUndoManager::SetMaxUndoActionCount

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-10-11 08:49:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/cb3ae5bb64f30552da1d5ff2bd9e58f8ede85f8b

tdf#154142 null-deref in SfxUndoManager::SetMaxUndoActionCount

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.