tdf#154142 null-deref in SfxUndoManager::SetMaxUndoActionCount

Change-Id: I09cfbccb5f2ffa009a3e40157c9373b7e10864dc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157764
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 6cfd36a392ec3710304ff3df3cb0f42e0d8b53d9)